# tflogger

./: .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py
.github/workflows/: ccpp.yml
cmake/: TFLoggerConfig.cmake.in
examples/cpp/: CMakeLists.txt  logger.cc  reader.cc
examples/python/: logger.py  reader.py
python/: CMakeLists.txt  package_init.py  pb_init.py  tflogger.i
test/: CMakeLists.txt  event_logger_test.cc  record_test.cc
tflogger/: event_logger.cc  event_logger.h  event_reader.cc  event_reader.h  status.h  utils.cc  utils.h
tflogger/crc32/: crc32c.cc  crc32c.h  crc32c_accelerate.cc
tflogger/pb/: event.proto  summary.proto
tflogger/record/: record_reader.cc  record_reader.h  record_writer.cc  record_writer.h
